--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,37 @@
+:root {
+    --body_gradient_left:#7200D0;
+    --body_gradient_right: #C800C1;
+    --form_bg: #ffffff;
+    --input_bg: #E5E5E5;
+    --input_hover:#eaeaea;
+    --submit_bg: #1FCC44;
+    --submit_hover: #40e263;
+    --icon_color:#6b6b6b;
+}
+
+
+* {
+ box-sizing: border-box;
+}
+
+*:before,
+*:after {
+ box-sizing: border-box;
+}
+
+
+html,body {
+    height: 100%;
+    position: relative;
+}
+
 html {
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
+    scroll-behavior: smooth;
+
+
 }
 
 body {
@@ -31,14 +61,36 @@ footer {
 }
 
 h2 {
+    font-family: 'Cinzel', serif;
+    font-size: 3rem;
     text-align: center;
     padding-top: 80px;
     margin-top: -80px;
     -webkit-background-clip: content-box;
     background-clip: content-box;
+
 }
 
-#navStyle {
+h3 {
+    font-family: 'Cinzel', serif;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+
+main {
+    min-height: 100vh; /* will cover the 100% of viewport */
+ overflow: hidden;
+ display: block;
+ position: relative;
+ padding-bottom: 3em; /* height of your footer */
+}
+
+
+
+/* HEADER */
+
+.navStyle {
     font-size: 1.2em;
     position: fixed;
     /* overflow: hidden; */
@@ -97,7 +149,7 @@ h2 {
     position: absolute;
 }
 
-#alerts {
+.alerts {
     margin-left: 80%;
     margin-top: 100px;
     min-width: 200px;
@@ -109,11 +161,13 @@ h2 {
     padding-right: 10%; */
 }
 
+/* BLOG */
+
 .thumbnail .caption-full {
     padding: 9px;
 }
 
-#posts {
+.posts {
     max-width: 650px;
 }
 
@@ -144,15 +198,21 @@ img {
     border-top: 50px solid transparent;
 }
 
-#titleSpace {
+.postImageDev {
+    max-width: 400px;
+    border: 30px solid transparent;
+    border-radius: 20%;
+}
+
+.titleSpace {
     padding-top: 10px;
     font-family: 'Monoton', cursive;
     font-size: 96px;
     text-shadow: 4px 4px 4px #aaa;
 }
 
-#submittedby {
-    text-align: right;
+.submittedby {
+    text-align: left;
 }
 
 #editor-container {
@@ -163,61 +223,8 @@ img {
     padding-right: -10%;
 }
 
-.btnSlide {
-    font-size: 40px;
-    height: auto;
-    width: auto;
-    min-width: 100px;
-    /* margin-bottom: 20%; */
-}
 
-.btnSlide:hover {
-    animation-name: scaling;
-    animation-duration: 2s;
-    animation-timing-function: ease;
-    /* transform: scale(1.1); */
-}
-
-@keyframes scaling {
-    60% {
-        transform: scale(1.3);
-    }
-}
-
-.carousel-caption {
-    bottom: 250px;
-}
-
-.card-columns {
-    column-count: 2;
-}
-
-.card-title {
-    margin: 25px 1%;
-    font-size: 26px;
-    font-weight: bold;
-}
-
-.card-text {
-    margin: 5px 1%;
-    font-size: 18px;
-}
-
-.card-img {
-    position: relative;
-    overflow: hidden;
-    border-radius: 2%;
-    max-height: 290px;
-    z-index: 1;
-}
-
-.card-img img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-#readMore {
+.readMore {
     background-color: #1ABC9C;
     color: #fff;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
@@ -239,8 +246,120 @@ img {
     color: #fff;
 }
 
-#readMore:hover {
+.readMore:hover {
     background: orange;
+}
+
+
+.comment {
+    margin-bottom: 15px;
+}
+
+/* .pagination {
+    margin: 20px;
+    font-weight: bold;
+    font-size: 1.5em;
+} */
+
+
+.pagination { 
+    display: inline-block; 
+    margin-top: 2rem;
+} 
+  
+.pagination a { 
+    font-weight:bold; 
+    font-size:20px; 
+    color: black; 
+    padding: 8px 16px; 
+    text-decoration: none; 
+} 
+
+/* MAIN PAGE -DEVLIFE */
+
+.sectionTitle {
+    margin: 1.2rem 0 1.2rem 0;
+}
+
+.aboutMain {
+    text-align: center; 
+    font-size: 1.5rem; 
+    margin: 2% 1%;
+}
+
+.btnSlide1 {
+    font-size: 40px;
+    height: auto;
+    width: auto;
+    min-width: 100px;
+    background-color: transparent;
+
+}
+
+.btnSlide2 {
+    font-size: 40px;
+    font-weight: bold;
+    height: auto;
+    width: auto;
+    min-width: 100px;
+    background-color: transparent;
+    color: aliceblue;
+
+}
+
+.btnSlide1:hover {
+    animation-name: scaling;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    /* transform: scale(1.1); */
+}
+
+.btnSlide2:hover {
+    animation-name: scaling;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    /* transform: scale(1.1); */
+}
+
+@keyframes scaling {
+    60% {
+        transform: scale(1.3);
+    }
+}
+
+.carousel-caption {
+    bottom: 50%
+}
+
+.card-columns {
+    column-count: 2;
+}
+
+.card-title {
+    margin: 25px 1%;
+    font-size: 26px;
+    font-weight: bold;
+}
+
+.card-text {
+    margin: 5px 1%;
+    font-size: 18px;
+}
+
+.card-img {
+    position: relative;
+    overflow: hidden;
+    border-radius: 2%;
+    max-height: 200px;
+    max-width:  200px;
+    margin: 10px;
+    z-index: 1;
+}
+
+.card-img img {
+    width: 100%;
+    height: auto;
+    display: block;
 }
 
 .shadow {
@@ -262,18 +381,65 @@ hr {
 }
 
 .devMenu {
+    font-family: 'Cinzel', serif;
     padding: 0px 15px 0 0;
     text-align: right;
     font-size: 36px;
+    
 }
 
 .devMenu a {
     color: black;
     border: 1px;
+    
 }
 
+
+
 .devMenu a:hover {
-    color: blue;
+    animation: colorchange 1s forwards;
+    
+}
+
+.devMenu > li {
+    position: relative;
+}
+
+.devMenu > li:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+
+  .devMenu  > li:hover:after {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+
+
+
+@keyframes colorchange {
+    0% {
+        color: black;
+        text-decoration-line: none;
+
+    }
+    100% {
+        /* color: green; */
+        color: rgb(4, 196, 196);
+        /* text-decoration-line: underline; */
+        /* font-weight: 800; */
+    }
 }
 
 ul li {
@@ -288,11 +454,30 @@ a:active {
     text-decoration: none;
 }
 
-.sectionTitle {
-    font-size: 48px;
-    text-align: center;
-    margin-top: 30px;
+
+
+#skills img {
+    max-height: 103px;
+    margin:  20px auto;
 }
+
+#skills i {
+    text-align: center;
+}
+
+#contact a:hover {
+    font-weight: 600;
+    color: darkblue!important;
+}
+
+.carousel-item > img {
+    max-height: 450px;
+    max-width: auto;
+}
+
+
+/* PORTFOLIO */
+
 
 .spaceSection {
     padding-left: 10%;
@@ -318,18 +503,19 @@ a:active {
     -webkit-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
     -moz-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
     box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
-    transition: .2s linear;
+    transition: .2s ease-out;
     z-index: 10;
+    background-color: snow
 }
 
 .entry img {
     border-radius: 5%;
-    max-height: 308.75px;
+    max-height: 210px;
 }
 
 .card-info {
     position: absolute;
-    top: 80%;
+    top: 75%;
     /* bottom: 50%; */
     left: 0;
     right: 0;
@@ -337,7 +523,7 @@ a:active {
     color: rgb(189, 172, 172); */
     visibility: hidden;
     opacity: 0;
-    transition: opacity 1s;
+    transition: opacity 1.5s;
     z-index: 5;
 }
 
@@ -351,6 +537,12 @@ a:active {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     padding: 0 0 100px 0;
+}
+
+
+.card-info > h2 {
+    font-family: 'Dancing Script', serif;
+    font-size: 3em;
 }
 
 #landingtitle {
@@ -367,17 +559,69 @@ a:active {
     width: 100%;
 }
 
-#skills img {
-    max-height: 103px;
+.portfolioimg {
+    max-width: 600px;
+    max-height: 300px;
 }
 
-#skills i {
+.projects {
+    display: grid;
+    grid-template-columns: repeat(2, 1.2fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-row-gap: 2rem;
+
+}
+
+.gif {
+    max-width: 700px;
+    max-height: auto;
+    padding: 50px;
+}
+
+.descPortfolio {
+    padding: 2rem 6rem 0 6rem;
+}
+
+.skillsetport {
     text-align: center;
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(3, 0.9fr);
+    margin: auto;
 }
 
-#contact a:hover {
-    font-weight: 600;
+
+.skillsetport > div > p {
+    text-decoration: underline;
+    font-size: 1.4rem;
 }
+
+.skillsetport > div > p ~ p {
+    text-decoration: none;
+    font-size: unset;
+}
+
+.skillsetport img {
+    max-height: 50px;
+    margin:  20px auto;
+    max-width: 80px; 
+    height: auto; 
+    padding-left: 5%;
+}
+
+.toollist {
+    margin: 0 7rem;
+}
+
+/* .resizedImgPort {
+    max-width: 80px; 
+    height: auto; 
+    padding-left: 5%;
+} */
+
+
+/* FOOTER */
+
 
 .footer .fab {
     color: white;
@@ -402,16 +646,245 @@ a:active {
 }
 
 #projects img:hover {
-    -webkit-transform: scale(1.4, 1.4);
-    transform: scale(1.4, 1.4);
+    /* -webkit-transform: scale(1.4, 1.4); */
+    transform: scale(1.1, 1.1);
+    /* animation: biggerImg 0.7s forwards; */
+    transition: transform 1s ease-in-out;
 }
 
-#titleDevBlog {
-    font-family: 'Cinzel', serif;
-    font-size: 3.5em;
+/* @keyframes biggerImg {
+    100% {
+        -webkit-transform: scale(1.1, 1.1);
+        transform: scale(1.1, 1.1);
+    }
+    
+} */
+
+.formclass {
+    border:1px solid #000000;
+    padding:3px;
+    text-align:center;
 }
 
-.portfolioimg {
-    max-width: 600px;
-    max-height: 300px;
+
+.skillset {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
 }
+
+.respImg {
+    display: none!important;
+}
+
+.formdiv {
+    margin-right: 3rem;
+}
+
+/* LOGIN - SIGNUP*/
+
+.signform {
+    width: 500px;
+    height: 300px;
+    /* this will help us center it*/
+    margin:auto;
+    background-color: transparent;
+    border-radius: 50px;
+    text-align: center;
+}
+
+.signform form {
+    padding: 2rem;
+}
+
+form > div {
+    margin: 1rem 0;
+}
+
+.input_container > i {
+    margin-right: 2%;
+}
+
+.input_container {
+    background-color: var(--input_bg);
+    /* vertically align icon and text inside the div*/
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.input_container:hover {
+    background-color: var(--input_hover);
+}
+
+.input_container,
+#input_submit {
+    height: 40px;
+    /* make the borders more round */
+    border-radius: 30px;
+    width: 100%;
+}
+
+.input_field {
+    /* customize the input tag with lighter font and some padding*/
+    color: var(--icon_color);
+    background-color: var(--input_bg);
+    width: 90%;
+    border: none;
+    font-size: 1.3rem;
+    font-weight: 400;
+    padding-left: 30px;
+}
+
+.input_field:hover,
+.input_field:focus {
+    /* remove the outline */
+    outline: none;
+}
+
+.sub {
+    display: grid;
+    grid-template-columns: repeat(2, 1.2fr);
+    grid-column-gap: 20px;
+
+}
+
+#input_submit {
+    /* submit button has a different color and different padding */
+    background-color: var(--submit_bg);
+    padding-left: 0;
+    font-weight: bold;
+    color: white;
+}
+
+#input_submit:hover {
+    background-color: var(--submit_hover);
+    /* simple color transition on hover */
+    transition: background-color,
+        1s;
+    cursor: pointer;
+}
+
+#backbtn {
+    height: 40px;
+    border-radius: 20px;
+    width: 100%;
+    background-color: tomato;
+    color: white;
+}
+
+#backbtn:hover {
+    background-color: salmon;
+    transition: background-color 1s;
+    cursor: pointer;
+}
+
+
+
+
+
+/* PORTABLE DEVICES */
+
+@media only screen and (max-width: 600px) {
+    h2 {
+        font-size: 2.5rem;
+    }
+    #landingtitle{
+        font-size: 4rem;
+    }
+    .card-info {
+        position: relative;
+        z-index: 5;
+        transition: none;
+        visibility: visible;
+        opacity: 1;
+    }
+    .carousel {
+        visibility: hidden;
+        position: absolute;
+    }
+    .gif {
+        max-width: -webkit-fill-available;
+    }
+    .twitterline {
+        display: none;
+    }
+    .formdiv {
+        display: none;
+    }
+    .projects {
+        grid-template-columns: repeat(1, 1.2fr);
+    }
+    .projects > div {
+        padding: 1.5rem 0;
+    }
+    .card-columns {
+        column-count: 1;
+    }
+    .skillset {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .respImg {
+        display: block!important;
+    }
+    .containerNav {
+        text-align: justify;
+    }
+    .descPortfolio {
+        padding: 2rem 3rem 0 3rem;
+    }
+    .toollist {
+        margin: 0 2rem;
+    }
+}
+
+
+@media only screen and (max-width: 1024px) {
+    h2 {
+        font-size: 2.5rem;
+    }
+    #landingtitle{
+        font-size: 4rem;
+    }
+    .card-info {
+        position: relative;
+        z-index: 5;
+        transition: none;
+        visibility: visible;
+        opacity: 1;
+    }
+    .carousel {
+        visibility: hidden;
+        position: absolute;
+    }
+    .gif {
+        max-width: -webkit-fill-available;
+    }
+    .twitterline {
+        display: none;
+    }
+    .formdiv {
+        display: none;
+    }
+    .projects {
+        grid-template-columns: repeat(1, 1.2fr);
+    }
+    .projects > div {
+        padding: 1.5rem 0;
+    }
+    .card-columns {
+        column-count: 1;
+    }
+    .respImg {
+        display: block!important;
+    }
+    .containerNav {
+        text-align: justify;
+    }
+    .descPortfolio {
+        padding: 2rem 3rem 0 3rem;
+    }
+    .toollist {
+        margin: 0 2rem;
+    }
+}
+
