--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -1,35 +1,41 @@
 <% include ../partials/header %>
 
-<h2>Portfolio</h2>
+    <div class="row; padding-bottom: 10px;">
+        <div class="col-md-12">
+            <h2 class="portfolioTitle">Portfolio</h2>
+            <section id="projects" style="margin: 2% 0;" class="projects">
+                <div style="margin: auto">
+                    <a href="./portfolio/website"><img src="../img/alexbuaiscia.jpg" alt="main website of mine"></a>
+                    <br>
+                    <p id="caption">Main website.
+                        <br>Functions: login and sign-up; GUI to write and post on-line.
+                        <br>
+                        <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, MongoDB</span>
+                    </p>
+                </div>
+                <div style="margin: auto; text-align: center">
+                    <a href="./portfolio/deploymentTool"><img src="../img/deployment_tool.jpg" alt="developed deployment tool"></a>
+                    <br>
+                    <p id="caption">Automatic deployment tool. Functions: upload files on an automation server;
+                        <br>Loading the wanted file on one application server and running shell scripts
+                        <br>to deploy and sync all the servers with the given parameters.
+                        <br>
+                        <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, Shell/Bash</span>
+                    </p>
+                </div>
+                <div style="margin: auto; text-align: center">
+                    <a href="./portfolio/portal"><img src="../img/portal.png" alt="portal tool"></a>
+                    <br>
+                    <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
+                        
+                        <br>
+                        <span style="font-weight: 600">Technologies used: ReactJS, Gatsby, HTML5/CSS3</span>
+                    </p>
+                </div>
 
-<section id="pki">
-    <h3>PKI tool</h3>
-    <div class="d-flex flex-column flex-lg-row justify-content-between">
-        <div>
-            <img class="portfolioimg" src="../img/deployment_tool.jpg" alt="developed deployment tool">
-            <br><p id="caption">Work related deployment tool</p>
+            </section>
         </div>
-        <div>
-            <img class="portfolioimg" src="../img/deployment_tool.jpg" alt="developed deployment tool">
-            <br><p id="caption">Work related deployment tool</p>
-        </div>
-        
-        
-
     </div>
-    <div>
-        
-    </div>
-
-        <div>
-            <img class="portfolioimg" src="../img/deployment_tool.jpg" alt="developed deployment tool">
-            <br><p id="caption">Work related deployment tool</p>
-        </div>
-        <div>
-            <img class="portfolioimg" src="../img/deployment_tool.jpg" alt="developed deployment tool">
-            <br><p id="caption">Work related deployment tool</p>
-        </div>  
-</section>
 
 
-<% include ../partials/footer %>
+    <% include ../partials/footer %>
