--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -5,7 +5,7 @@
             <h2 class="portfolioTitle">Portfolio</h2>
             <section id="projects" style="margin: 2% 0;" class="projects">
                 <div style="margin: auto">
-                    <a href="./portfolio/website"><img src="../img/alexbuaiscia.jpg" alt="main website of mine"></a>
+                    <a href="./portfolio/website"><img src="../img/alexbuaiscia_rs.png" alt="main website of mine"></a>
                     <br>
                     <p id="caption">Main website.
                         <br>Functions: login and sign-up; GUI to write and post on-line.
@@ -14,7 +14,7 @@
                     </p>
                 </div>
                 <div style="margin: auto; text-align: center">
-                    <a href="./portfolio/deploymentTool"><img src="../img/deployment_tool.jpg" alt="developed deployment tool"></a>
+                    <a href="./portfolio/deploymentTool"><img src="../img/deployment_tool_rs.jpg" alt="developed deployment tool"></a>
                     <br>
                     <p id="caption">Automatic deployment tool. Functions: upload files on an automation server;
                         <br>Loading the wanted file on one application server and running shell scripts
@@ -24,7 +24,7 @@
                     </p>
                 </div>
                 <div style="margin: auto; text-align: center">
-                    <a href="./portfolio/portal"><img src="../img/portal.png" alt="portal tool"></a>
+                    <a href="./portfolio/portal"><img src="../img/portal_rs.png" alt="portal tool"></a>
                     <br>
                     <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
                         
