--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -57,7 +57,7 @@
                     <div class="col-md-4">
                         <a href="/devlife">
                             <div class="card mb-3 entry">
-                                <img class="card-img-top" src="img/dev_lap.jpg" alt="JS screenshot">
+                                <img class="card-img-top" src="img/dev_lap_rs.jpg" alt="JS screenshot">
                                 <div class="card-info">
                                     <h2>Dev life</h2>
                                 </div>
@@ -68,7 +68,7 @@
                     <div class="col-md-4">
                         <a href="/portfolio">
                             <div class="card mb-3 entry">
-                                <img class="card-img-top" src="img/portfolio.png" alt="JS screenshot">
+                                <img class="card-img-top" src="img/portfolio_rs.png" alt="JS screenshot">
                                 <div class="card-info">
                                     <h2>Portfolio</h2>
                                 </div>
@@ -79,7 +79,7 @@
                     <div class="col-md-4">
                         <a href="/devblog">
                             <div class="card mb-3 entry">
-                                <img class="card-img-top" src="img/dev_blog.jpg" alt="JS screenshot">
+                                <img class="card-img-top" src="img/dev_blog_rs.jpg" alt="JS screenshot">
                                 <div class="card-info">
                                     <h2>Dev blog</h2>
                                 </div>
