--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -21,7 +21,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <img style="max-height: 714px" class="respImg d-block w-100" src="../img/dev_img.jpg" alt="Second slide">
+                <img style="max-height: 714px" class="respImg d-block w-100" src="../img/dev_img_rs.jpg" alt="Second slide">
                 <div id="carouselExampleIndicators" class="carousel slide slider" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -29,7 +29,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="../img/road.jpg" alt="First slide">
+                            <img class="d-block w-100" src="../img/road_rs.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <a href="#skills">
                                     <button type="button" class="btn btn-default btnSlide1">Are those the skills you need?</button>
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../img/desk.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="../img/desk_rs.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block btnSlide">
                                 <a href="/devblog">
                                     <button type="button" class="btn btn-default btnSlide2">Sharing some knowledge
