add animate.css to portfolio

--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -4,7 +4,7 @@
         <div class="col-md-12">
             <h2 class="portfolioTitle">Portfolio</h2>
             <section id="projects" style="margin: 2% 0;" class="projects">
-                <div style="margin: auto">
+                <div style="margin: auto" class="animated fadeInLeft delay-1s">
                     <a href="./portfolio/website"><img src="../img/alexbuaiscia_rs.png" alt="main website of mine"></a>
                     <br>
                     <p id="caption">Main website.
@@ -13,7 +13,7 @@
                         <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, MongoDB</span>
                     </p>
                 </div>
-                <div style="margin: auto; text-align: center">
+                <div style="margin: auto; text-align: center" class="animated fadeInRight delay-1s">
                     <a href="./portfolio/deploymentTool"><img src="../img/deployment_tool_rs.jpg" alt="developed deployment tool"></a>
                     <br>
                     <p id="caption">Automatic deployment tool. Functions: upload files on an automation server;
@@ -23,7 +23,7 @@
                         <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, Shell/Bash</span>
                     </p>
                 </div>
-                <div style="margin: auto; text-align: center">
+                <div style="margin: auto; text-align: center" class="animated fadeInLeft delay-1s">
                     <a href="./portfolio/portal"><img src="../img/portal_rs.png" alt="portal tool"></a>
                     <br>
                     <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
