--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -76,7 +76,7 @@
         <div id="skills" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Skills</h2>
-                <section class="skillset" style="margin: 1% 5%; font-size: 6em; ">
+                <section class="skillset animated fadeIn  delay-1s" style="margin: 1% 5%; font-size: 6em; ">
                     <img src="../img/if_html5_294678.svg" alt="HTML5">
                     <img src="../img/if_css3_294692.svg" alt="CSS3">
                     <i class="fab fa-js"></i>
