--- a/views/dev/devblog.ejs
+++ b/views/dev/devblog.ejs
@@ -13,7 +13,7 @@
                     <div class="card-columns">
 
                         <% devPosts.forEach(function(post){ %>
-                            <div class="container">
+                            <div class="container animated slideInUp">
                                 <div class="card rounded shadow posts">
 
                                     <!-- <div class="card-img-top"> -->
