--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 wow animated fadeIn delay-1s">
                 <h2 id="about" class="sectionTitle">
                     About me
                 </h2>
