--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-12">
                 <img style="max-height: 714px" class="respImg d-block w-100" src="../img/dev_img_rs.jpg" alt="Second slide">
-                <div id="carouselExampleIndicators" class="carousel slide slider" data-ride="carousel">
+                <div id="carouselExampleIndicators" class="carousel slide slider animated zoomIn" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 wow animated fadeIn delay-1s">
                 <h2 id="about" class="sectionTitle">
                     About me
                 </h2>
@@ -76,8 +76,8 @@
         <div id="skills" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Skills</h2>
-                <section class="skillset" style="margin: 1% 5%; font-size: 6em; ">
-                    <img src="../img/if_html5_294678.svg" alt="HTML5">
+                <section class="skillset wow animated fadeIn delay-2s" style="margin: 1% 5%; font-size: 6em; ">
+                    <img  src="../img/if_html5_294678.svg" alt="HTML5">
                     <img src="../img/if_css3_294692.svg" alt="CSS3">
                     <i class="fab fa-js"></i>
                     <img src="../img/if_nodejs-new-pantone-black_1012818.svg" alt="NodeJS">
