--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -32,7 +32,7 @@
                             <img class="d-block w-100" src="../img/road_rs.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <a href="#skills">
-                                    <button type="button" class="btn btn-default btnSlide1">Are those the skills you need?</button>
+                                    <button type="button" class="btn btn-default btnSlide1">Are these the skills you need?</button>
                                 </a>
                             </div>
                         </div>
