--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -65,8 +65,10 @@
                     About me
                 </h2>
                 <p class="aboutMain">
-                    I'm an IT Application Specialist based in Brno, Czech Republic, who is building full-stack websites and applications. I love
-                    to learn technologies and to build new projects. </p>
+                    I'm an experienced application engineer working with APIs, DBs, webservers, 
+                    creating automation full-stack web apps using nodeJS / React to operate safe and easy deployments or to provide access to monitoring. 
+                    <br/>
+                    I'm based in Brno, Czech Republic. I just love to learn technologies and to build new projects. </p>
                     <br/>
                 <div style="text-align:center">
                     <a class="btn btn-info" target="_blank" href="../docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
