--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -4,17 +4,10 @@
         <div class="col-md-12">
             <h2 class="portfolioTitle">Portfolio</h2>
             <section id="projects" style="margin: 2% 0;" class="projects">
-                <div style="margin: auto" class="animated fadeInLeft delay-1s">
-                    <a href="./portfolio/website"><img src="../img/alexbuaiscia_rs.png" alt="main website of mine"></a>
-                    <br>
-                    <p id="caption">Main website.
-                        <br>Functions: login and sign-up; GUI to write and post on-line.
-                        <br>
-                        <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, MongoDB</span>
-                    </p>
-                </div>
-                <div style="margin: auto; text-align: center" class="animated fadeInRight delay-1s">
-                    <a href="./portfolio/deploymentTool"><img src="../img/deployment_tool_rs.jpg" alt="developed deployment tool"></a>
+                <div style="margin: auto; text-align: center" class="animated fadeInLeft delay-1s">
+                    <a href="./portfolio/deploymentTool">
+                        <img src="../img/deployment_tool_rs.jpg" alt="developed deployment tool">
+                    </a>
                     <br>
                     <p id="caption">Automatic deployment tool. Functions: upload files on an automation server;
                         <br>Loading the wanted file on one application server and running shell scripts
@@ -23,13 +16,49 @@
                         <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, Shell/Bash</span>
                     </p>
                 </div>
-                <div style="margin: auto; text-align: center" class="animated fadeInLeft delay-1s">
-                    <a href="./portfolio/portal"><img src="../img/portal_rs.png" alt="portal tool"></a>
+                <div style="margin: auto; text-align: center" class="animated fadeInRight delay-1s">
+                    <a href="./portfolio/portal">
+                        <img src="../img/portal_rs.png" alt="portal tool">
+                    </a>
                     <br>
                     <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
-                        
+
                         <br>
                         <span style="font-weight: 600">Technologies used: ReactJS, Gatsby, HTML5/CSS3</span>
+                    </p>
+                </div>
+                <div style="margin: auto; text-align: center" class="animated fadeInLeft delay-1s">
+                    <a href="./portfolio/restApi">
+                        <img src="../img/rest_api.png" alt="rest api app">
+                    </a>
+                    <br>
+                    <p id="caption">Complete RESTful API. Make all CRUD operations from/to a DB, or upload a bulk file. All documented/testable
+                        through Swagger.
+
+                        <br>
+                        <span style="font-weight: 600">Technologies used: NodeJS, Swagger, Postman, Docker, HTML5/CSS3. Test: Mocha/Chai </span>
+                    </p>
+                </div>
+                <div style="margin: auto; text-align: center" class="animated fadeInRight delay-1s">
+                    <a href="./portfolio/movieDB">
+                        <img src="../img/movie_tmdb_react.png" alt="rest api app">
+                    </a>
+                    <br>
+                    <p id="caption">Fetch data through an API and show the best rated movies/shows, and their details.
+
+                        <br>
+                        <span style="font-weight: 600">Technologies used: ReactJS, HTML5/CSS3, Test: Jest/Enzyme</span>
+                    </p>
+                </div>
+                <div style="margin: auto; text-align: center" class="animated fadeInLeft delay-1s">
+                    <a href="./portfolio/website">
+                        <img src="../img/alexbuaiscia_rs.png" alt="main website of mine">
+                    </a>
+                    <br>
+                    <p id="caption">Main website.
+                        <br>Functions: login and sign-up; GUI to write and post on-line.
+                        <br>
+                        <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, MongoDB</span>
                     </p>
                 </div>
 
